refactor: extract class slackAdapter from NotifyUser

--- a/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
+++ b/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\OtpProxy.cs" />
     <Compile Include="Models\ProfileDao.cs" />
     <Compile Include="Models\Sha256Adapter.cs" />
+    <Compile Include="Models\SlackAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
