--- a/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
+++ b/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\AuthenticationService.cs" />
+    <Compile Include="Models\FailedCounterProxy.cs" />
     <Compile Include="Models\OtpProxy.cs" />
     <Compile Include="Models\ProfileDao.cs" />
     <Compile Include="Models\Sha256Adapter.cs" />
