--- a/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
+++ b/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Models\AuthenticationService.cs" />
     <Compile Include="Models\FailedCounterProxy.cs" />
+    <Compile Include="Models\NLogAdapter.cs" />
     <Compile Include="Models\OtpProxy.cs" />
     <Compile Include="Models\ProfileDao.cs" />
     <Compile Include="Models\Sha256Adapter.cs" />
