--- a/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
+++ b/DependencyInjectionWorkshop/DependencyInjectionWorkshop.csproj
@@ -76,7 +76,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\AuthenticationService.cs" />
-    <Compile Include="Models\FailedCounterProxy.cs" />
+    <Compile Include="Models\FailedCounter.cs" />
+    <Compile Include="Models\IFailedCounter.cs" />
+    <Compile Include="Models\ILogger.cs" />
+    <Compile Include="Models\INotification.cs" />
+    <Compile Include="Models\IOtp.cs" />
+    <Compile Include="Models\IProfile.cs" />
     <Compile Include="Models\NLogAdapter.cs" />
     <Compile Include="Models\OtpProxy.cs" />
     <Compile Include="Models\ProfileDao.cs" />
