--- a/DependencyInjectionWorkshop/packages.config
+++ b/DependencyInjectionWorkshop/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.1" targetFramework="net461" />
   <package id="Dapper" version="1.60.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="NSubstitute" version="4.3.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NLog" version="4.6.3" targetFramework="net461" />
   <package id="SlackAPI" version="1.0.7" targetFramework="net461" />
@@ -10,4 +12,5 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
 </packages>
